# Fraud-Detection-Micro-service

./: .gitignore  .gitleaks.toml  README.md  eventSchema.json  fraud_detector.py  generateSyntheticData.py  pyproject.toml  requirements.txt  schemaValidityTest.py  test_schema_validation.py  test_schema_validity.py
.github/workflows/: dependency-audit.yml  security.yml
config/: eventEnums.json
fraud_detector/: __init__.py  constants.py  eventSchema.json  fraud_detector.py  rule_registry.py  rules.py
tests/: test_detector.py
tests/data/: invalid_transaction_missing_field.json  valid_transaction.json
tools/: generate_synthetic_data.py
